# egui-video

./: CHANGELOG.md  Cargo.toml  README.md
examples/: main.rs
src/: lib.rs
src/player/: gui_player.rs  mod.rs  player.rs
src/subtitle/: mod.rs
