[package]
name = "egui-video"
version = "0.10.0"
edition = "2021"
license = "MIT"
description = "a video library for egui"
repository = "https://github.com/n00kii/egui-video"
readme = "README.md"
authors = ["n00kii"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
from_bytes = ["dep:tempfile"]

[dependencies]
egui = "0.31"
atomic = "0.6.0"
bytemuck = { version = "1.23", features = ["derive"]}
ffmpeg-the-third = "3.0.2"
anyhow = "1.0.98"
timer = "0.2.0"
chrono = "0.4.41"
tempfile = { version = "3.20.0", optional = true }
cpal = "0.16.0"
parking_lot = "0.12.3"
nom = "7.1.3"
libc = "0.2.173"

[dev-dependencies]
rfd = "0.15.3"
eframe = "0.31"
